# robovast

./: .gitignore  .gitmodules  CLEARPATH_INTEGRATION.md  CLEARPATH_TROUBLESHOOTING.md  Makefile  NAVIGATION_TEST_COMPARISON_README.md  PATH_VARIATION_README.md  PHASE2_SEARCH_LOOP.md  README.md  TESTING_CLEARPATH.md  compare_navigation_tests.py  jsonld_metadata.py  pyproject.toml  result_analyzer.cfg  update_vast_num_paths.ipynb
.github/: diagnose_plugins.py  test_commands.sh  test_growth_sim.py  test_gui_dependency_fix.py  test_vast.py
.github/linters/: .pylintrc  .yaml-lint.yml
.github/workflows/: build-and-test.yml  check_notebook_cleanup.yml  cleanup_pr_images.yml  cleanup_untagged_images.yml  doc.yml  image.yml  publish.yml  scan.yml
Dataset/: kubernetes_tmpl.yaml  scenario.variants  scenario.variation
Dataset/analysis/: analysis_run.ipynb
Dataset/common/: monitor_cam_launch.py  nav2_launch.py  view.rviz  world.sdf.xacro
analysis/analysis_common/: package.xml  requirements.txt  setup.cfg  setup.py
analysis/result_analyzer/: package.xml  pyproject.toml  setup.cfg  setup.py
analysis/result_analyzer/result_analyzer/: __init__.py  result_analyzer.py
analysis/result_analyzer/result_analyzer/widgets/: chat_widget.py  command_execution_worker.py  common.py  config_loader.py  jupyter_widget.py  local_execution_widget.py  log_viewer_widget.py  rosbag_parser.py  settings_dialog.py  terminal_output_widget.py  worker_thread.py
common/: cleanup_notebooks.py
common/robovast_common/: package.xml  pyproject.toml  setup.cfg  setup.py
common/robovast_common/robovast_common/: __init__.py  common.py  data_model.py  execution.py  file_cache.py  floorplan_generation.py  scenario_generation.py  variant_generation.py
common/robovast_common/robovast_common/analysis/: common.py
common/robovast_common/robovast_common/navigation/: __init__.py  object_shapes.py  obstacle_placer.py  path_generator.py  waypoint_generator.py
common/robovast_common/robovast_common/variation/: base_variation.py  parameter_variation.py  scenario_execution_interface.py
common/robovast_utils/: package.xml  setup.cfg  setup.py
common/vast_cli/: pyproject.toml
common/vast_cli/vast_cli/: cli.py
configs/clearpath/: robot.srdf  robot.urdf.xacro
configs/dataset/: hallways10m0o.vast  hallways10m2o.vast  hallways10m6o.vast  hallways15m0o.vast  hallways15m3o.vast  hallways15m9o.vast  hallways20m0o.vast  hallways20m12o.vast  hallways20m4o.vast  hallways25m0o.vast  hallways25m15o.vast  hallways25m5o.vast  hallways5m0o.vast  hallways5m1o.vast  hallways5m3o.vast  hospital.vast  hospital10m0o.vast  hospital10m1o.vast  hospital10m2o.vast  hospital10m6o.vast  hospital15m0o.vast  hospital15m3o.vast  hospital15m9o.vast  hospital20m0o.vast  hospital20m12o.vast  hospital20m4o.vast  hospital25m0o.vast  hospital25m15o.vast  hospital25m5o.vast  hospital5m0o.vast  hospital5m1o.vast  hospital5m3o.vast  navigation_5maps.vast  navigation_combined.vast  office10m0o.vast  office10m2o.vast  office10m6o.vast  office15m0o.vast  office15m3o.vast  office15m9o.vast  (+35 more)
configs/navigation/: config.yaml  nav_through_poses.osc  nav_to_pose_multiple.osc  nav_to_pose_multiple.vast  navigation.vast  navigation_search.vast  navigation_variation.vast  navigation_variation_random.vast  navigation_variation_rasterized.vast  scenario.osc  small_dataset.vast
container/: Dockerfile  build.sh
container/archiver/: Dockerfile
container/controller/: Dockerfile  build.sh
container/files/: entrypoint.sh  startx11_virtual.sh  xml_to_yaml_converter.py
container/robovast/: Dockerfile  build.sh
dependencies/: scenery_builder.sh
docs/: analysis.rst  cluster_execution.rst  conf.py  configuration.rst  developer_guide.rst  dictionary.txt  evaluation.rst  example.rst  execution_modes.rst  how_to_run.rst  index.rst  output_structure.rst  results_processing.rst  search.rst  setup.rst  variation.rst
docs/_ext/: mcp_tools.py  (+1 more)
example/: kubernetes_tmpl.yaml  scenario.osc  scenario.variation
execution/cluster_execution/: package.xml  pyproject.toml  setup.cfg  setup.py
execution/cluster_execution/cluster_execution/: cluster_execution.py  download_results.py  generate_floorplans.py
execution/execution_utils/: pyproject.toml
execution/execution_utils/execution_utils/: cli.py  execute_local.py
src/robovast_magbotsim/: dummy.osc  example_config.yaml  minimal_test.vast  pyproject.toml
src/robovast_magbotsim/robovast_magbotsim/: __init__.py  gui.py  magbotsim_env_variation.py
src/robovast_mcp/: README.md  pyproject.toml
src/robovast_mcp/examples/: openai_prompt.py  test_mcp_server.py
src/robovast_nav/: README.md  pyproject.toml
src/robovast_nav/robovast_nav/: __init__,py  data_model.py  floorplan_generation.py  map_loader.py  mcp_plugin.py  nav_variation.py  object_shapes.py  obstacle_placer.py  path_generator.py  waypoint_generator.py
src/robovast_nav/robovast_nav/data/: __init__.py  scenery_builder.sh
src/robovast_nav/robovast_nav/gui/: __init__,py  __init__.py  map_visualizer.py  map_visualizer_qt.py  navigation_gui.py
src/robovast_nav/robovast_nav/variation/: PATH_VARIATION_README.md  floorplan_variation.py  nav_base_variation.py  obstacle_variation.py  obstacle_variation_with_distance_trigger.py  path_variation.py
tools/: cleanup_notebooks.py  docker_exec.sh  ros2_exec.sh  rosbags_bt_to_csv.py  rosbags_common.py  rosbags_tf_to_csv.py  rosbags_to_csv.py
variation/variant_editor/: package.xml  setup.cfg  setup.py
variation/variant_editor/variant_editor/: __init__.py  collision_checker.py  common.py  data_models.py  map_widget.py  object_shapes.py  obstacle_placer.py  path_generator.py  variant_wizard.py  variation_thread.py  waypoint_generator.py  waypoint_table.py  wizard_base_page.py  wizard_floorplan_variation.py  wizard_global_settings.py  wizard_map_selection.py  wizard_obstacle_placement.py  wizard_path_generation.py  wizard_sensor_noise.py
variation/variation_utils/: package.xml  pyproject.toml  setup.cfg  setup.py
variation/variation_utils/variation_utils/: cli.py  generate_variants.py  list_variants.py
(+416 files in other folders)
