[tool.poetry]
name = "execution-utils"
version = "1.0.0"
description = "Execution utilities for RoboVast"
authors = ["Frederik Pasch <fred-labs@mailbox.org>"]
license = "Apache-2.0"
packages = [{include = "execution_utils"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
robovast-common = {path = "../../common/robovast_common", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
execute_local = "execution_utils.execute_local:main"