[tool.poetry]
name = "robovast-mcp"
version = "0.1.0"
description = "MCP server for RoboVAST with a plugin-based tool interface"
authors = ["Frederik Pasch <fred-labs@mailbox.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "robovast_mcp"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
mcp = "^1.0"
robovast = "^1.0.0"

[tool.poetry.plugins."robovast.mcp_plugins"]
docs = "robovast_mcp.plugins.docs:DocsPlugin"
campaign_metadata = "robovast_mcp.plugins.campaign_metadata:CampaignMetadataPlugin"
configuration_metadata = "robovast_mcp.plugins.configuration_metadata:ConfigurationMetadataPlugin"
plugin_metadata = "robovast_mcp.plugins.plugin_metadata:PluginMetadataPlugin"
run_metadata = "robovast_mcp.plugins.run_metadata:RunMetadataPlugin"
run_data = "robovast_mcp.plugins.run_data:RunDataPlugin"
search_metadata = "robovast_mcp.plugins.search_metadata:SearchMetadataPlugin"
prompts = "robovast_mcp.plugins.prompts:PromptsPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
